# team-merge-build-repeat

./: .env.example  .gitattributes  .gitignore  Hedgedocs_meetings_history.md  Justfile  Makefile  README.md  RELEASE.md  SystemOverview.md  ansible.cfg  build.gradle  compose.yaml  compose.yml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  settings.gradle
ansible/: README.md  playbook.yml
application-server/: Dockerfile  build.gradle
doc/: API_DOCS.md  DOCKER.md  HEALTH_AND_INFO.md  Hedgedocs_meetings_history.md  SystemOverview.md
k8s/: README.md  application-deployment.yaml  (+10 more)
services/game-engine/: Dockerfile  pyproject.toml
services/game-engine/src/: main.py  sudoku_solver.py
services/game-engine/tests/: test_health.py
services/genai/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
services/genai/src/genai_service/: __init__.py  assistant.py  chat_client.py  game_client.py  main.py  mcp_server.py  ollama_model.py  openai_model.py  schemas.py  settings.py
services/genai/src/sudoku_lib/: __init__.py  validation.py
services/genai/src/sudoku_lib/strategy/: __init__.py  candidate_lines.py  common.py  double_pairs.py  fish.py  multiple_lines.py  next_step.py  single_candidate.py  single_position.py  subsets.py
services/genai/tests/: test_assistant.py  test_chat_answer.py  test_chat_client.py  test_game_client.py  test_health.py  test_mcp_server.py  test_model_configuration.py  test_ollama_model.py  test_openai_model.py  test_schemas.py  test_settings.py  test_strategy.py  test_validation.py
(+238 files in other folders)
