
[project]
name = "game-engine-service"
version = "0.1.0"
description = "FastAPI service for game engine."
requires-python = ">=3.12"
dependencies = ["fastapi[standard]>=0.115.0", "py-sudoku>=2.0.0"]

[dependency-groups]
dev = ["httpx>=0.27.0", "pytest>=8.3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

