[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai-service"
version = "0.1.0"
description = "FastAPI service for Sudoku GenAI features."
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.0",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-ollama>=1.0.0",
    "mcp[cli]>=1.27,<2",
    "starlette<1.0.0",
]

[dependency-groups]
dev = ["pytest>=8.3.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/genai_service", "src/sudoku_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
